--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ecommerce</groupId>
-	<artifactId>sb-ecom</artifactId>
+	<artifactId>Ecommerce-SpringBoot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>sb-ecom</name>
 	<description>Spring Boot Ecommerce Project</description>
