--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,8 @@
 				<configuration>
 					<source>21</source>
 					<target>21</target>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
