--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.app.jwtExpirationMs=3000000
 spring.ecom.app.jwtCookieName=springBootEcom
 
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.ecommerce.project=DEBUG
-logging.level.com.ecommerce.sb_ecom=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.ecommerce.project=DEBUG
+#logging.level.com.ecommerce.sb_ecom=DEBUG
